--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <a class="skip-link" href="#main">Skip to content</a>
+    <a class="skip-link" href="#main" data-ru="К содержимому" data-en="Skip to content">К содержимому</a>
 
     <header class="site-header" id="top">
       <div class="container header-inner">
@@ -25,20 +25,32 @@
           <span class="brand-mark" aria-hidden="true"></span>
           <span class="brand-text">
             <span class="brand-name">LEDIPROVIZOR</span>
-            <span class="brand-sub">Pharmaceutical elegance • Health &amp; Wellness</span>
+            <span class="brand-sub" data-ru="Фармацевтическая элегантность" data-en="Pharmaceutical elegance">
+              Фармацевтическая элегантность
+            </span>
           </span>
         </a>
 
+        <button class="nav-toggle" type="button" aria-label="Открыть меню" data-ru-aria="Открыть меню" data-en-aria="Open menu" aria-expanded="false">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+
         <nav class="nav" aria-label="Primary">
-          <a href="index.html">Главная</a>
-          <a href="products.html">Продукты</a>
-          <a href="blog.html">Блог</a>
-          <a href="about.html" class="active">Обо мне</a>
-          <a href="contact.html">Контакты</a>
+          <a href="index.html" data-ru="Главная" data-en="Home">Главная</a>
+          <a href="products.html" data-ru="Продукты" data-en="Products">Продукты</a>
+          <a href="blog.html" data-ru="Блог" data-en="Blog">Блог</a>
+          <a href="about.html" class="active" data-ru="Обо мне" data-en="About">Обо мне</a>
+          <a href="certificates.html" data-ru="Сертификаты" data-en="Certificates">Сертификаты</a>
+          <a href="contact.html" data-ru="Контакты" data-en="Contact">Контакты</a>
         </nav>
 
         <div class="header-cta">
-          <a class="btn btn-primary" href="https://www.wildberries.ru/seller/250045490">Перейти в магазин</a>
+          <div class="lang-switch" role="group" aria-label="Language switcher">
+            <button class="lang-btn is-active" type="button" data-lang-switch="ru">RU</button>
+            <button class="lang-btn" type="button" data-lang-switch="en">EN</button>
+          </div>
         </div>
       </div>
     </header>
@@ -50,56 +62,61 @@
             <img
               class="portrait"
               alt="Professional portrait placeholder (replace with real photo)"
-              src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='1100' viewBox='0 0 900 1100'><defs><linearGradient id='p2' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23070708'/><stop offset='1' stop-color='%23151518'/></linearGradient><linearGradient id='gold' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23f0dcaa'/><stop offset='1' stop-color='%23cdaa6b'/></linearGradient></defs><rect width='900' height='1100' rx='60' fill='url(%23p2)'/><rect x='70' y='70' width='760' height='960' rx='52' fill='none' stroke='url(%23gold)' stroke-width='8'/><circle cx='450' cy='420' r='170' fill='%23ffffff' opacity='0.05'/><circle cx='360' cy='380' r='70' fill='%23cdaa6b' opacity='0.10'/><rect x='170' y='700' width='560' height='18' rx='9' fill='%23ffffff' opacity='0.10'/><rect x='210' y='732' width='480' height='18' rx='9' fill='%23ffffff' opacity='0.08'/><text x='170' y='660' font-family='Cinzel, Georgia' font-size='34' fill='%23f0dcaa'>Your photo here</text><text x='170' y='790' font-family='Fraunces, Georgia' font-size='18' fill='%23bfb6a6'>Replace with a professional portrait</text></svg>"
+              src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='1100' viewBox='0 0 900 1100'><defs><linearGradient id='p2' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23070708'/><stop offset='1' stop-color='%23151518'/></linearGradient><linearGradient id='gold' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23f0dcaa'/><stop offset='1' stop-color='%23cdaa6b'/></linearGradient></defs><rect width='900' height='1100' rx='60' fill='url(%23p2)'/><rect x='70' y='70' width='760' height='960' rx='52' fill='none' stroke='url(%23gold)' stroke-width='8'/><circle cx='450' cy='420' r='170' fill='%23ffffff' opacity='0.05'/><circle cx='360' cy='380' r='70' fill='%23cdaa6b' opacity='0.10'/><rect x='170' y='700' width='560' height='18' rx='9' fill='%23ffffff' opacity='0.10'/><rect x='210' y='732' width='480' height='18' rx='9' fill='%23ffffff' opacity='0.08'/><text x='170' y='660' font-family='Cinzel, Georgia' font-size='34' fill='%23f0dcaa'>Ваше фото</text><text x='170' y='790' font-family='Fraunces, Georgia' font-size='18' fill='%23bfb6a6'>Замените на профессиональный портрет</text></svg>"
             />
           </div>
 
           <div class="founder-copy">
             <div class="section-head">
-              <h1>About Me / Обо мне</h1>
-              <p class="muted">Female pharmacist &amp; entrepreneur • Health &amp; wellness</p>
+              <h1 data-ru="Обо мне" data-en="About me">Обо мне</h1>
+              <p class="muted" data-ru="Фармацевт и предприниматель • здоровье и wellness" data-en="Pharmacist and entrepreneur • health & wellness">
+                Фармацевт и предприниматель • здоровье и wellness
+              </p>
             </div>
 
-            <p class="body-text">
-              “I create supplements that work, based on integrity and good intentions.”
+            <p class="body-text" data-ru-html="«Я создаю добавки, которые действительно работают, на основе честности и добрых намерений».<br /><br />Клинический опыт 12+ лет. Интегративный нутрициолог, специалист по превенции (LA Academy). Создаю продукты так же, как работаю с пациентами: бережно, честно и с учетом реальных привычек." data-en-html="“I create supplements that work, based on integrity and good intentions.”<br /><br />Clinical experience 12+ years. Integrative nutritionist and preventive specialist (LA Academy). I build products the way I work with patients: carefully, honestly, and with attention to real-life routines.">
+              «Я создаю добавки, которые действительно работают, на основе честности и добрых
+              намерений».
               <br /><br />
-              Clinical experience 12+ years. Integrative nutritionist and preventive specialist (LA
-              Academy). I build products the way I work with patients: carefully, honestly, and
-              with attention to real-life routines.
+              Клинический опыт 12+ лет. Интегративный нутрициолог, специалист по превенции
+              (LA Academy). Создаю продукты так же, как работаю с пациентами: бережно, честно
+              и с учетом реальных привычек.
             </p>
 
             <div class="quote">
-              <p class="quote-text">
-                “Act with integrity.”
+              <p class="quote-text" data-ru="«Действовать с честью»." data-en="“Act with integrity.”">
+                «Действовать с честью».
               </p>
-              <p class="quote-author">— LEDIPROVIZOR credo</p>
+              <p class="quote-author" data-ru="— кредо LEDIPROVIZOR" data-en="— LEDIPROVIZOR credo">— кредо LEDIPROVIZOR</p>
             </div>
 
             <div class="philosophy">
-              <h3>Science + results</h3>
+              <h3 data-ru="Наука + результат" data-en="Science + results">Наука + результат</h3>
               <ul class="checklist">
-                <li>Liposomal Iron (90% absorption)</li>
-                <li>Hand Milk (cellular laminaria juice)</li>
-                <li>Coming: premium Vitamin D, magnesium of own development</li>
+                <li data-ru="Липосомальное железо (90% усвояемость)" data-en="Liposomal Iron (90% absorption)">Липосомальное железо (90% усвояемость)</li>
+                <li data-ru="Молочко для рук (клеточный сок ламинарии)" data-en="Hand Milk (cellular laminaria juice)">Молочко для рук (клеточный сок ламинарии)</li>
+                <li data-ru="Скоро: Premium Vitamin D, магний собственной разработки" data-en="Coming: Premium Vitamin D, magnesium of own development">Скоро: Premium Vitamin D, магний собственной разработки</li>
               </ul>
             </div>
 
             <div class="about-pills" role="list" aria-label="Key metrics">
-              <span class="pill" role="listitem">890+ Instagram followers</span>
-              <span class="pill" role="listitem">2000+ sales in 2 months (WB)</span>
-              <span class="pill" role="listitem">12+ years experience</span>
+              <span class="pill" role="listitem" data-ru="890+ подписчиков в Instagram" data-en="890+ Instagram followers">890+ подписчиков в Instagram</span>
+              <span class="pill" role="listitem" data-ru="2000+ продаж за 2 месяца (WB)" data-en="2000+ sales in 2 months (WB)">2000+ продаж за 2 месяца (WB)</span>
+              <span class="pill" role="listitem" data-ru="12+ лет опыта" data-en="12+ years experience">12+ лет опыта</span>
             </div>
 
             <div class="philosophy">
-              <h3>Diplomas / Certificates</h3>
-              <p class="muted small">Placeholders — replace with real screenshots in stylish frames.</p>
+              <h3 data-ru="Дипломы / Сертификаты" data-en="Diplomas / Certificates">Дипломы / Сертификаты</h3>
+              <p class="muted small" data-ru="Плейсхолдеры — замените на реальные скриншоты." data-en="Placeholders — replace with real screenshots.">
+                Плейсхолдеры — замените на реальные скриншоты.
+              </p>
               <div class="product-grid">
                 <div class="frame">
                   <div class="frame-inner">
                     <div class="media" style="aspect-ratio: 4 / 3;">
                       <img
-                        alt="Diploma placeholder #1"
-                        src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='675' viewBox='0 0 900 675'><defs><linearGradient id='bg' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%230f0f12'/><stop offset='1' stop-color='%231a1a20'/></linearGradient></defs><rect width='900' height='675' rx='36' fill='url(%23bg)'/><rect x='70' y='70' width='760' height='535' rx='28' fill='none' stroke='rgba(205,170,107,0.35)' stroke-width='6'/><text x='110' y='190' font-family='Cinzel, Georgia' font-size='28' fill='%23f0dcaa'>Diploma #1</text><rect x='110' y='230' width='540' height='16' rx='8' fill='%23ffffff' opacity='0.10'/><rect x='110' y='260' width='460' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><rect x='110' y='290' width='500' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><text x='110' y='560' font-family='Fraunces, Georgia' font-size='16' fill='%23bfb6a6'>Replace with certificate screenshot</text></svg>"
+                        alt="Диплом #1 (плейсхолдер)"
+                        src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='675' viewBox='0 0 900 675'><defs><linearGradient id='bg' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%230f0f12'/><stop offset='1' stop-color='%231a1a20'/></linearGradient></defs><rect width='900' height='675' rx='36' fill='url(%23bg)'/><rect x='70' y='70' width='760' height='535' rx='28' fill='none' stroke='rgba(205,170,107,0.35)' stroke-width='6'/><text x='110' y='190' font-family='Cinzel, Georgia' font-size='28' fill='%23f0dcaa'>Диплом №1</text><rect x='110' y='230' width='540' height='16' rx='8' fill='%23ffffff' opacity='0.10'/><rect x='110' y='260' width='460' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><rect x='110' y='290' width='500' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><text x='110' y='560' font-family='Fraunces, Georgia' font-size='16' fill='%23bfb6a6'>Замените на сертификат</text></svg>"
                       />
                     </div>
                   </div>
@@ -108,8 +125,8 @@
                   <div class="frame-inner">
                     <div class="media" style="aspect-ratio: 4 / 3;">
                       <img
-                        alt="Diploma placeholder #2"
-                        src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='675' viewBox='0 0 900 675'><defs><linearGradient id='bg2' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%230f0f12'/><stop offset='1' stop-color='%231a1a20'/></linearGradient></defs><rect width='900' height='675' rx='36' fill='url(%23bg2)'/><rect x='70' y='70' width='760' height='535' rx='28' fill='none' stroke='rgba(205,170,107,0.35)' stroke-width='6'/><text x='110' y='190' font-family='Cinzel, Georgia' font-size='28' fill='%23f0dcaa'>Diploma #2</text><rect x='110' y='230' width='560' height='16' rx='8' fill='%23ffffff' opacity='0.10'/><rect x='110' y='260' width='420' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><rect x='110' y='290' width='480' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><text x='110' y='560' font-family='Fraunces, Georgia' font-size='16' fill='%23bfb6a6'>Replace with certificate screenshot</text></svg>"
+                        alt="Диплом #2 (плейсхолдер)"
+                        src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='675' viewBox='0 0 900 675'><defs><linearGradient id='bg2' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%230f0f12'/><stop offset='1' stop-color='%231a1a20'/></linearGradient></defs><rect width='900' height='675' rx='36' fill='url(%23bg2)'/><rect x='70' y='70' width='760' height='535' rx='28' fill='none' stroke='rgba(205,170,107,0.35)' stroke-width='6'/><text x='110' y='190' font-family='Cinzel, Georgia' font-size='28' fill='%23f0dcaa'>Диплом №2</text><rect x='110' y='230' width='560' height='16' rx='8' fill='%23ffffff' opacity='0.10'/><rect x='110' y='260' width='420' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><rect x='110' y='290' width='480' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><text x='110' y='560' font-family='Fraunces, Georgia' font-size='16' fill='%23bfb6a6'>Замените на сертификат</text></svg>"
                       />
                     </div>
                   </div>
@@ -118,8 +135,10 @@
             </div>
 
             <div class="founder-actions">
-              <a class="btn btn-primary" href="products.html">View Products</a>
-              <a class="btn btn-ghost" href="https://instagram.com/your_account" target="_blank" rel="noreferrer">Instagram @your_account</a>
+              <a class="btn btn-primary" href="products.html" data-ru="Смотреть продукты" data-en="View products">Смотреть продукты</a>
+              <a class="btn btn-ghost" href="https://instagram.com/your_account" target="_blank" rel="noreferrer" aria-label="Instagram" data-ru-aria="Instagram" data-en-aria="Instagram">
+                <span aria-hidden="true">IG</span> @your_account
+              </a>
             </div>
           </div>
         </div>
@@ -130,17 +149,21 @@
       <div class="container footer-inner">
         <div>
           <p class="footer-brand">LEDIPROVIZOR</p>
-          <p class="muted small">Premium health &amp; wellness by a female pharmacist/entrepreneur.</p>
+          <p class="muted small" data-ru="Премиальный wellness‑бренд от фармацевта‑предпринимателя." data-en="Premium wellness brand by a female pharmacist‑entrepreneur.">
+            Премиальный wellness‑бренд от фармацевта‑предпринимателя.
+          </p>
         </div>
         <div class="footer-links" aria-label="Footer links">
-          <a href="index.html">Home</a>
-          <a href="products.html">Products</a>
-          <a href="blog.html">Blog</a>
-          <a href="about.html" class="active">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="index.html" data-ru="Главная" data-en="Home">Главная</a>
+          <a href="products.html" data-ru="Продукты" data-en="Products">Продукты</a>
+          <a href="blog.html" data-ru="Блог" data-en="Blog">Блог</a>
+          <a href="about.html" class="active" data-ru="Обо мне" data-en="About">Обо мне</a>
+          <a href="certificates.html" data-ru="Сертификаты" data-en="Certificates">Сертификаты</a>
+          <a href="contact.html" data-ru="Контакты" data-en="Contact">Контакты</a>
         </div>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
 
